# distillate

./: .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: emails.yml
distillate/: config.py  digest.py  main.py  obsidian.py  remarkable_client.py  state.py  summarizer.py  zotero_client.py
docs/: CNAME  index.html
papers_workflow/: config.py  digest.py  main.py  notify.py  obsidian.py  remarkable_auth.py  remarkable_client.py  renderer.py  semantic_scholar.py  state.py  summarizer.py  zotero_client.py
scripts/: install-launchd.sh  uninstall-launchd.sh
tests/: test_engagement.py  test_init.py  test_metadata_and_emails.py  test_promote.py  test_v016.py  test_v017.py
