[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papers-workflow"
version = "0.1.0"
description = "Automate paper reading workflow between Zotero and reMarkable"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "requests",
    "rmscene>=0.7.0",
    "pymupdf>=1.24.0",
    "anthropic>=0.40.0",
    "resend>=2.0.0",
]

[project.scripts]
papers-workflow = "papers_workflow.main:main"
